# rag-ed1

./: .gitignore  CHANGELOG.md  CHANGELOG_detailed.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py
src/agents/: self_querying_retriever_agent.py  vanilla_rag.py
src/loaders/: canvas.py  piazza.py
src/rag_ed/: __init__.py
src/rag_ed/agents/: self_querying.py  self_querying_retriever_agent.py  vanilla_rag.py
src/rag_ed/graphs/: __init__.py  course.py  generation.py
src/rag_ed/loaders/: canvas.py  canvas_api.py  piazza.py  utils.py
src/rag_ed/retrievers/: graph.py  vectorstore.py
src/retrievers/: vectorstore.py
tests/: __init__.py  imscc_utils.py  piazza_utils.py  test_agents.py  test_agents_cli.py  test_graph_generation.py  test_graph_negative.py  test_graph_retriever.py  test_loaders.py  test_retriever.py  test_self_querying_retriever_agent.py  test_utils_tempdir.py
