[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-ed"
version = "0.1.0"
description = "RAG agent demonstrations"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "langchain-core",
    "langchain-community",
    "unstructured",
    "pdfminer.six==20221105",
    "pi-heif",
    "unstructured-inference",
    "tqdm",
    "pdf2image",
    "unstructured-pytesseract",
    "jq",
    "smolagents",
    "langchain-openai",
]

[project.optional-dependencies]
dev = ["black"]

[project.scripts]
vanilla-rag = "rag_ed.agents.vanilla_rag:main"

[tool.setuptools.packages.find]
where = ["src"]
